--- a/philessay.html
+++ b/philessay.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Personal Bootstrap Template</title>
+  <title>My Portfolio</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -136,7 +136,7 @@
     </section><!-- /Resume Section -->
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
         <div class="container">
             <div class="credits">
               <!-- All the links in the footer should remain intact. -->
