--- a/personalessay.html
+++ b/personalessay.html
@@ -72,7 +72,9 @@
                 <h3 id="title">To All The Thin Girls</h3>
                 <h6 id="author">by Lee Jia Ren</h6>
                     <div class="row d-flex justify-content-center text-center">  
-                        <p class="col-lg-8 mb-0" id="info">This was written from my heart. It's a peek into the person I was, am and still is. I wrote this for me. Simple as that.</p>
+                        <p class="col-lg-8 mb-0" id="info">If you asked me why started I writing this, I'd say its for a class. But if you ask
+                            me on a deeper level, I wrote it as a way to reclaim the years I had spent lost and unbalanced—because some things don’t
+                            find resolution until they’re put into words.</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +85,7 @@
             <ol>
               <li><a href="index.html">Home</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li class="current">Essay on Barthes</li>
+              <li class="current">Personal Essay</li>
             </ol>
           </div>
         </nav>
@@ -99,7 +101,7 @@
             <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
 
                 <p>
-                    My first year of college, a friend from class remarked, “You have such a tiny waist.” For an instant, I considered
+                    My first year of college, a friend from class caught a glimpse of my stomach and remarked, “You have such a tiny waist.” For an instant, I considered
                     saying, “Well, I don’t eat,” just to see her envy twist into something closer to pity and horror. Because a girl is
                     most beautiful when she is thin, but sick in the head if she starves herself to get there. But it would be cruel to
                     say that to someone who meant well, so I simply smiled and thanked her.
@@ -110,7 +112,7 @@
                     that’s why it took me so long to realize I was teetering on the cusp of an eating disorder.
                 </p>
                 <p>
-                    My story is not unique. Eating disorders have surged worldwide during the pandemic, and in Singapore, 8% of young
+                    Let me preface this by saying: my story is not unique. Eating disorders have surged worldwide during the pandemic, and in Singapore, 8% of young
                     people are at risk. Before everything went down, I had already seen multiple bony, anorexic girls on TV and
                     understood that it was wrong. Unnatural. I’d wondered, with morbid fascination, <i>how could they let it get this
                         far?</i>
@@ -137,23 +139,25 @@
                     best friend, examined the wound festering in dried blood with mild disgust. “Why do you want to remove it?”
                 </p>
                 <p>
-                    I shrugged and picked at the scab again. It seemed obvious enough. Once the mole was gone, I would be pretty. I
-                    could be someone people enjoyed being around. Because if you’re pretty, you’re likable.
+                    I shrugged and picked at the scab again. It seemed obvious enough. Once the mole was gone, I would be pretty. Then,
+                    maybe, I wouldn’t have to sit on the stairwell alone, watching everyone else chatter on easily. I could be someone
+                    people actually enjoyed being around. Because, as everyone knows, when you’re pretty, anything you do is adorable.
                 </p>
                 <p>
                     Unfortunately, the mole returned to its former glory within days. I grumbled and moved on. 
                 </p>
+<br>
                 <p>
                     Then I was fifteen, in my third year of secondary school, and we had just been assigned new classes. The girl next to me
                     had a round face, plump figure and slitted eyes that disappeared when her lips curled up. With one glance, I deemed her
-                    plain. But came recess, and suddenly our table was surrounded, with people asking about her December break–fine–if she
-                    finished her homework–obviously not, she scoffed. I marvelled as they giggled at every flick of her hair as if it were
+                    plain. But came recess, and suddenly our table was surrounded, with people asking about her December break–<i>fine</i>–if she
+                    finished her homework–<i>obviously not</i>, she scoffed. I marvelled as they giggled at every flick of her hair as if it were
                     the most amusing thing. I couldn't decide who I wanted to be: her or them.
                 </p>
                 <p>
                     I learned her name was Shuning and her best friend was Alyssa, another girl in our class that was her equal in charm and
                     wit. We grew close, fast. The day a group chat was formed with the three of us in it, I was simultaneously ecstatic and
-                    frightened. I thought, any day now, they might just decide I didn’t measure up to their effortless humour.
+                    frightened. After all, any day now, they might just decide I didn’t measure up to their effortless humour.
                 </p>
                 <p>
                     A few days into our precarious friendship, they told me they were skipping lunch.
