--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/ren-logo.png" rel="icon">
+  <link href="assets/img/ren-logo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -38,13 +38,13 @@
   ======================================================== -->
 </head>
 
-<body class="portfolio-page">
+<body class="portfolio-page dark-background">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/ren-logo.png" alt="ren's logo"> 
+        <img src="assets/img/ren-logo (1).png" alt="ren's logo"> 
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -91,20 +91,9 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/sanlou.png" class="img-fluid" alt="picture of sanlou">
-                <div class="portfolio-info">
-                  <h4>Personal Work</h4>
-                  <p>A short essay about a place from my childhood</p>
-                  <a href="placessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-intern">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/internship-1.png" class="img-fluid" alt="Weber Shandwick">
+                <img src="assets/img/portfolio/weber.png" class="img-fluid" alt="Weber Shandwick">
                 <div class="portfolio-info">
                   <h4>Internship Work</h4>
                   <p>My Time with Weber Shandwick</p>
@@ -113,9 +102,32 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/self-1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Personal Work</h4>
+                  <p>My Personal Essay: To All The Thin Girls</p>
+                  <a href="personalessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-intern">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/redbug.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Internship Work</h4>
+                  <p>A shot at rebranding with Red Bug</p>
+                  <a href="redbug.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acad">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/barthes.jpg" class="img-fluid" alt="Roland Barthes A Lover's Discourse">
+                <img src="assets/img/portfolio/barthes.png" class="img-fluid" alt="Roland Barthes A Lover's Discourse">
                 <div class="portfolio-info">
                   <h4>Academic Essay</h4>
                   <p>An exploration of The Secret History through Barthes</p>
@@ -126,21 +138,18 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/self-2.png" class="img-fluid" alt="picture of sanlou">
                 <div class="portfolio-info">
                   <h4>Personal Work</h4>
-                  <p>My Personal Essay: To All The Thin Girls</p>
-                  <a href="personalessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>A short essay about a place from my childhood</p>
+                  <a href="placessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-
-
-
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vid">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/vid-1.png" class="img-fluid" alt="RB Trade Show Marketing">
+                <img src="assets/img/portfolio/redbug-2.png" class="img-fluid" alt="RB Trade Show Marketing">
                 <div class="portfolio-info">
                   <h4>Video</h4>
                   <p>A video project with Red Bug Communications</p>
@@ -149,17 +158,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Books 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+
 
 
           </div><!-- End Portfolio Container -->
