--- a/about.html
+++ b/about.html
@@ -81,9 +81,9 @@
             <img src="assets/img/headshot.jpg" class="img-fluid headshot" alt="headshot">
           </div>
           <div class="col-lg-6 content">
-            <h2>About Me</h2>
+            <h2>Lee Jia Ren</h2>
             <p class="fst-italic py-3">
-              Hi there! I'm Jia Ren, but you can call me Ren, or Lee, whatever you want. If you happen to speak Mandarin, disclaimer: no, my name does not mean house person. But you know what they all say — a name makes a person. Happy to announce that I am a hombody, and I'm proud of it!
+              Some musings: does the name make the person, or the person make the name? I think it must be the former, because all my life, I've been a homebody (or jia ren 家人). I blame this inertia wholeheartedly on my name.  
             </p>
             <div class="row">
                 <ul>
@@ -93,7 +93,7 @@
                 </ul>
             </div>
             <p class="py-3">
-              On a more serious note, here's a professional introduction to me: I am a final-year student majoring in Communications and New Media with a minor in Interactive Media Development. Passionate about reading, writing, and creating, I thrive in fast-paced environments where change is constant and growth is the norm. I'm pursuing a career in Public Relations to combine my love for communication and creativity while challenging myself to exceed expectations every day.
+              Or, a more professional introduction: I am a final-year student majoring in Communications and New Media with a minor in Interactive Media Development. Passionate about reading, writing, and creating, I thrive in fast-paced environments where change is constant and growth is the norm. Currently, I'm pursuing a career in Public Relations to combine my love for communication and creativity while challenging myself to exceed expectations every day.
             </p>
           </div>
         </div>
@@ -141,9 +141,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Microsoft Suite</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Figma</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
