--- a/placessay.html
+++ b/placessay.html
@@ -116,13 +116,13 @@
                 </p><p>
                     Beyond the gate lay cement stairs, foreboding under dim light. We trudged up, one by one, our steps echoing off the walls that closed in on both sides. At the landing between the second and third floors, another weathered gate awaited, which I remember thinking was so odd. Some trips after, I would pretend it was a portal to another dimension.
                 </p><p>
-                    And just like a mysterious portal, my memory gets hazy after that point. I’ve asked around, requested pictures, but I simply cannot recall the interior of <i>san-lou</i>. What I do remember is this: we’d return to <i>san-lou</i> every few months, my sisters and I bickering over the chores the moment we arrived (we all wanted to change the sheets). Each time we returned, the air would be musty from having been enclosed too long. And when you mopped the floor, the gloss of the black-and-white chequered tiles outshone even the glistening wet tracks under the fluorescent lights.
+                    Only, like a mysterious portal, my memory gets hazy after that point. I’ve asked around, requested pictures, but I simply cannot recall the interior of <i>san-lou</i>. What I do remember is this: we’d return to <i>san-lou</i> every few months, my sisters and I bickering over the chores the moment we arrived (we all wanted to change the sheets). Each time we returned, the air would be musty from having been enclosed too long. And when you mopped the floor, the gloss of the black-and-white chequered tiles outshone even the glistening wet tracks under the fluorescent lights.
                 </p><p>
                     **
                 </p><p>
                     One morning, I awoke to our car pulling into my grandma’s house. As we unloaded our things, I asked my mother, “are we not going to <i>san-lou</i> first?”
                 </p><p>
-                    “No, we rented <i>san-lou</i> out. We’ll stay with popo from now on.”
+                    “No, we rented <i>san-lou</i> out. We’ll stay with <i>popo</i> from now on.”
                 </p><p>
                     “Oh. Okay.”
                 </p><p>
@@ -142,9 +142,11 @@
                 </p><p>
                     It felt like old times. We swept the floor, wiped the windows, and at the end of the day, sat down on cream tiles and drank beer instead of teh-c, because we were all older now. I looked around at the five of us crammed in a living room that seemed like an echo from the past and realised, ah, this was what I lost.
                 </p><p>
-                    They say home is not a place, but I disagree. The day we rented out <i>san-lou</i>, I had lost a physical connection to my roots. All I have left are the fuzzy memories of a time when things were black and white, and what is that compared to the one who returns to it at every end of the day, painstakingly cleans the dust off its windows, and who has a concrete place they could truly call their own?
+                    They say home is not a place, but I disagree. The day we rented out <i>san-lou</i>, I had lost a physical connection to
+                    my roots, a concrete place to call my own. All I have left are the fuzzy memories of a time when things were black and
+                    white. And what are memories compared to the one who returns to it at every end of the day?
                 </p><p>   
-                    At 22, I know a few more things. I was born in Malaysia, but it has no place for me anymore. I have two sisters, one of whom I see every other weekend. And three is no longer my favourite number.  
+                    At 22, I know a few more things. I was born in Malaysia, but it has no longer has a place for me. I have two sisters, one of whom I see every other weekend. And three is no longer my favourite number.  
                 </p>
             </div>
 
