--- a/redbug.html
+++ b/redbug.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/ren-logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -126,17 +126,14 @@
               <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
                 <h3>Project information</h3>
                 <ul>
-                    <li><strong>Category</strong>: Canva Video</li>
+                    <li><strong>Category</strong>: Brand Revamp</li>
                     <li><strong>Company</strong>: Red Bug Communications</li>
-                    <li><strong>Details</strong>: Directed the brand revamp exercise with Red Bug.</li>    
-                    <li><a href="https://www.canva.com/design/DAGKbKwaAQA/HWAIyX48tIiknbK4Cqf0Mg/watch?utm_content=DAGKbKwaAQA&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank" rel="noopener"><strong>Click here for live URL</strong></a></li>           
+                    <li><strong>Details</strong>: Coordinated a brand revamp exercise with Red Bug. The agency had been looking to refresh
+                      their brand website for a while and sought my help in researching and directing a brand revamp. Over the course of
+                      three months, I organised 4 different workshops and was able to flesh out a renewed brand guide for the company. Check
+                      out the full deck to see what I've done. </li>
+                    <li><a href="https://www.canva.com/design/DAGSkva3w9k/DZkSASvOrMHXaX_HXx54mw/view?utm_content=DAGSkva3w9k&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank" rel="noopener"><strong>Click here for live URL</strong></a></li>           
                   </ul>
-              </div>
-              <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-                <h2>Exercitationem repudiandae officiis neque suscipit</h2>
-                <p>
-                  Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-                </p>
               </div>
             </div>
   
