bug in typed quote

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row align-items-center vh-100">
           <div class="col-sm-8">
             <h1 class="hello">Lee Jia Ren</h1>
-            <h4 class="desc">I'm <span class="typed" data-typed-items="a creator, a storyteller, still figuring it out...,a writer">a writer</span><span class="typed-cursor typed-cursor--blink"></span></h4>
+            <h4 class="desc">I'm <span class="typed" data-typed-items="a creator,  a writer, a storyteller, figuring it out...,"></span><span class="typed-cursor typed-cursor--blink"></span></h4>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/lee-jia-ren/"><i class="bi bi-linkedin"></i></a>
             </div>
