added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,13 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +48,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/ren-logo (1).png" alt="ren's logo"> 
+        <img src="assets/img/ren-logo (1).png" alt="ren's logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -70,121 +74,163 @@
             <h1>
               Portfolio
             </h1>
+          </div>
         </div>
-      </div>
-    </div><!-- End Page Title -->
+      </div><!-- End Page Title -->
 
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section">
+      <!-- Portfolio Section -->
+      <section id="portfolio" class="portfolio section">
 
-      <div class="container">
+        <div class="container">
 
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+          <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-self">Personal Writing</li>
-            <li data-filter=".filter-acad">Academic Writing</li>
-            <li data-filter=".filter-intern">Internship Works</li>
-            <li data-filter=".filter-vid">Videos</li>
-          </ul><!-- End Portfolio Filters -->
+            <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-self">Writing Samples</li>
+              <li data-filter=".filter-ux">UI/UX Projects</li>
+              <li data-filter=".filter-intern">Internship Works</li>
+              <li data-filter=".filter-vid">Videos</li>
+            </ul><!-- End Portfolio Filters -->
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-intern">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/weber.png" class="img-fluid" alt="Weber Shandwick">
-                <div class="portfolio-info">
-                  <h4>Internship Work</h4>
-                  <p>My Time with Weber Shandwick</p>
-                  <a href="assets/files/Final Report Slides (1).pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-intern">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/weber.png" class="img-fluid" alt="Weber Shandwick">
+                  <div class="portfolio-info">
+                    <h4>Internship Work</h4>
+                    <p>My Time with Weber Shandwick</p>
+                    <a href="assets/files/Final Report Slides (1).pdf" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
 
-            
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/self-1.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Personal Work</h4>
-                  <p>My Personal Essay: To All The Thin Girls</p>
-                  <a href="personalessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/self-1.png" class="img-fluid" alt="">
+                  <div class="portfolio-info">
+                    <h4>Writing Samples</h4>
+                    <p>My Personal Essay: To All The Thin Girls</p>
+                    <a href="personalessay.html" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-intern">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/redbug.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Internship Work</h4>
-                  <p>A shot at rebranding with Red Bug</p>
-                  <a href="redbug.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-intern">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/redbug.png" class="img-fluid" alt="">
+                  <div class="portfolio-info">
+                    <h4>Internship Work</h4>
+                    <p>A shot at rebranding with Red Bug</p>
+                    <a href="redbug.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acad">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/barthes.png" class="img-fluid" alt="Roland Barthes A Lover's Discourse">
-                <div class="portfolio-info">
-                  <h4>Academic Essay</h4>
-                  <p>An exploration of The Secret History through Barthes</p>
-                  <a href="philessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/barthes.png" class="img-fluid"
+                    alt="Roland Barthes A Lover's Discourse">
+                  <div class="portfolio-info">
+                    <h4>Writing Samples</h4>
+                    <p>An exploration of The Secret History through Barthes</p>
+                    <a href="philessay.html" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/self-2.png" class="img-fluid" alt="picture of sanlou">
-                <div class="portfolio-info">
-                  <h4>Personal Work</h4>
-                  <p>A short essay about a place from my childhood</p>
-                  <a href="placessay.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/self-2.png" class="img-fluid" alt="picture of sanlou">
+                  <div class="portfolio-info">
+                    <h4>Writing Samples</h4>
+                    <p>A short essay about a place from my childhood</p>
+                    <a href="placessay.html" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vid">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/redbug-2.png" class="img-fluid" alt="RB Trade Show Marketing">
-                <div class="portfolio-info">
-                  <h4>Video</h4>
-                  <p>A video project with Red Bug Communications</p>
-                  <a href="tradeshow.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vid">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/redbug-2.png" class="img-fluid" alt="RB Trade Show Marketing">
+                  <div class="portfolio-info">
+                    <h4>Video</h4>
+                    <p>A video project with Red Bug Communications</p>
+                    <a href="tradeshow.html" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ux">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/uiux-2.png" class="img-fluid" alt="Chat-trics">
+                  <div class="portfolio-info">
+                    <h4>UI/UX Project</h4>
+                    <p>Self-designed dahsboard for ChatGPT metrics</p>
+                    <a href="tradeshow.html" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-self">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/self-3.png" class="img-fluid" alt="Script">
+                  <div class="portfolio-info">
+                    <h4>Video</h4>
+                    <p>A proposed script for a short 5min DHL video ad</p>
+                    <a href="https://dhladvert.my.canva.site/" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ux">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/uiux-1.png" class="img-fluid" alt="SlideCraft">
+                  <div class="portfolio-info">
+                    <h4>UI/UX Project</h4>
+                    <p>Self-designed AI-powered slide creation app</p>
+                    <a href="https://leejiaren.notion.site/slidecraft" title="More Details" class="details-link"><i
+                        class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
 
 
 
+            </div><!-- End Portfolio Container -->
 
-          </div><!-- End Portfolio Container -->
+          </div>
 
         </div>
 
-      </div>
-
-    </section><!-- /Portfolio Section -->
+      </section><!-- /Portfolio Section -->
 
   </main>
 
   <footer id="footer">
     <div class="container">
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
       </div>
+    </div>
     </div>
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
