--- a/redbug.html
+++ b/redbug.html
@@ -102,19 +102,19 @@
                 <div class="swiper-wrapper align-items-center">
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/redbug-1.png" alt="branding title">
+                    <img src="assets/img/portfolio/title.png" alt="branding title">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/redbug-2.png" alt="brand story">
+                    <img src="assets/img/portfolio/brand story.png" alt="brand story">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/redbug-3.png" alt="tone of voice">
+                    <img src="assets/img/portfolio/tone of voice.png" alt="tone of voice">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/redbug-4.png" alt="site design">
+                    <img src="assets/img/portfolio/site design.png" alt="site design">
                   </div>
   
                 </div>
