--- a/placessay.html
+++ b/placessay.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>My Portfolio</title>
+  <title>Three is a Coincidence, Two is Not.</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
