editing new links

--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
                   <div class="portfolio-info">
                     <h4>UI/UX Project</h4>
                     <p>Self-designed dahsboard for ChatGPT metrics</p>
-                    <a href="tradeshow.html" title="More Details" class="details-link"><i
+                    <a href="chattrics.html" title="More Details" class="details-link"><i
                         class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
